# llm-zoomcamp-2026

./: .gitignore  README.md
course-materials/01-agentic-rag/code/: pyproject.toml
course-materials/01-agentic-rag/code/experiments/01-agentic-rag/minimal-rag/: pyproject.toml
course-materials/03-orchestration/flows/: 1_chat_without_rag_openai.yaml  2_chat_with_rag_openai.yaml  4_simple_agent_openai.yaml
experiments/01-agentic-rag/minimal-rag/: README.md  agent_homework.py  fetch_dataset.py  homework.py  inspect_new_dataset.py  prompt_demo.py  pyproject.toml  rag.py  rag_pipeline.py  search_demo.py  test_openai.py
experiments/02-vector-search/minimal-vector-search/: README.md  homework.py  pyproject.toml
experiments/03-orchestration/: README.md
experiments/04-evaluation/: README.md
experiments/04-evaluation/minimal-evaluation/: homework.py  pyproject.toml  q1_generate_questions.py
notes/01-agentic-rag/: 01-introduction.md  README.md
